# pmai-model-vision-language

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml
Testmodels/: .gitignore  README.md  main.py  pyproject.toml  testmodels.ipynb
Testmodels/.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml
images/: book.txt  cat.txt  child.txt  dog.txt  people.txt
utils/: config.py
