[project]
name = "pmai-model-vision-language"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "evaluate>=0.4.6",
    "ipython>=9.12.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.6",
    "langchain>=1.2.13",
    "langchain-classic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-huggingface>=1.2.1",
    "langgraph>=1.1.3",
    "langsmith>=0.7.22",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "transformers>=4.35.0",
]
