[project]
name = "pmai-model-vision-language"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "openai>=2.36.0",
    "pandas>=3.0.2",
    "pymilvus>=3.0.0",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "uvicorn>=0.46.0",
]
